<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Profile_activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/myprofile"
        android:background="@color/colorPrim"
        android:textColor="#ffffff"
        android:textSize="40sp"
        android:gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:gravity="bottom"
        android:paddingLeft="10sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/uname"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20sp"
        android:gravity="bottom"
        android:paddingLeft="10sp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="18dp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/john"
        android:id="@+id/etName"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="@color/colorPrimaryText"
        android:text="@string/passsword"
        android:textSize="20sp"
        android:gravity="bottom"
        android:paddingLeft="10sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:textSize="18dp"
        android:inputType="textPassword"
        android:hint="******************"
        android:backgroundTint="@color/colorPrimary"
        android:id="@+id/etPassword"
        android:gravity="bottom"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/conpassword"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryText"
        android:gravity="bottom"
        android:paddingLeft="10sp"
        />

    <EditText
        android:id="@+id/etConPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_weight="1"
        android:inputType="textPassword"
        android:textSize="18dp"
        android:backgroundTint="@color/colorPrimary"
        android:gravity="bottom"
        android:hint="*******************" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:text="@string/save"
        android:textSize="20dp"
        android:onClick="save"
        android:background="@color/colorPrim"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:layout_weight="1"/>
</LinearLayout>