<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:orientation="vertical"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:padding="50dp"
        android:layout_weight="4"
        android:background="@color/colorPrim"
        android:src="@drawable/logo"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="@color/colorPrim"
        android:textSize="10dp"
        android:gravity="bottom"
        android:id="@+id/etMessage"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/uname"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20dp"
        android:gravity="bottom"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="john"
        android:id="@+id/etUname"
        android:backgroundTint="@color/colorPrimary"
        android:gravity="bottom"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="18dp"
        android:layout_weight="1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/passsword"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20dp"
        android:gravity="bottom"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:inputType="textPassword"
        android:id="@+id/etPasswd"
        android:hint="*****************"
        android:gravity="bottom"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="18dp"
        android:layout_weight="1"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@color/colorPrim"
        android:onClick="login"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:textSize="24dp" />

</LinearLayout>